2008-11-23  Ingo Renner  <ingo@typo3.org>

	* Added feature #9813: Turn the workspace selector into a drop down toolbar item menu

2008-11-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow up for feature #9775: htmlArea RTE: additional features for link insertion dialogue

2008-11-22  Steffen Kamper  <info@sk-typo3.de>

	* felogin: completed ChangeLog, raised ext-version to 1.1.0

2008-11-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9798: Don't show fe_users password in page module

2008-11-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9802: Frontend plugins show PHP error if there is no TypoScript configuration

2008-11-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow up for issue #9771: htmlArea RTE spellchecker not working in TYPO3 4.3-dev

2008-11-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9786: Remove duplicate JS-Files in backend.php

2008-11-12  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0alpha1

2008-11-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8903: redirect url is not passed with get/post method

2008-11-12  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9654: Integrate return value depending on a found includeLibs configuration
	* Fixed bug #9747: Update function names of caching API to be consistent with FLOW3
	* Cleanup: Updated NEWS.txt
	* Added feature #9778: Improvement of removeXSS (thanks to Steffen Kamper, David Slayback)
	* Fixed bug #9748: Some extensions do not work anymore in the frontend
	* Fixed bug #9639: DB Analyzer / Compare Tool can't handle the upgrade of the cache tables (thanks to Michael Stucki)
	* Added feature #9670: Integrate code-completion for TypoScript in the t3editor (thanks to Stephan Petzl, Christian Kartnig and Tobias Liebig)

2008-11-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #5714: Pagecount not correct in indexed_search

2008-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9771: htmlArea RTE spellchecker not working in TYPO3 4.3-dev